[gd_scene load_steps=4 format=3 uid="uid://dlqu1euc1l1be"]

[ext_resource type="Script" uid="uid://bsegmxv0gcwnb" path="res://scenes/menus/pause_menu/pause_menu.gd" id="1_lde4l"]
[ext_resource type="PackedScene" uid="uid://4henpedxyll8" path="res://scenes/menus/settings_menu/audio_controls/audio_controls.tscn" id="2_fgv3k"]
[ext_resource type="PackedScene" uid="uid://cta3neh2ats6o" path="res://scenes/menus/start_menu/start_menu.tscn" id="2_i58lr"]

[node name="PauseMenu" type="PanelContainer"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0.5019608)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lde4l")
title_scene = ExtResource("2_i58lr")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="RootMenuContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/RootMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/RootMenuContainer/MarginContainer"]
layout_mode = 2

[node name="LabelPaused" type="Label" parent="CenterContainer/RootMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ButtonResume" type="Button" parent="CenterContainer/RootMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ButtonSettings" type="Button" parent="CenterContainer/RootMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonQuitTitle" type="Button" parent="CenterContainer/RootMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Title"

[node name="ButtonQuitOS" type="Button" parent="CenterContainer/RootMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To OS"

[node name="SettingsMenuContainer" type="PanelContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/SettingsMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/SettingsMenuContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/SettingsMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelSettings" type="Label" parent="CenterContainer/SettingsMenuContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"
horizontal_alignment = 1

[node name="ButtonBack" type="Button" parent="CenterContainer/SettingsMenuContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/SettingsMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/SettingsMenuContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="AudioControls" parent="CenterContainer/SettingsMenuContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" instance=ExtResource("2_fgv3k")]
layout_mode = 2
